--- a/angular/01-cadastro-contatos/app/contatos/contatos-lista.component.html
+++ b/angular/01-cadastro-contatos/app/contatos/contatos-lista.component.html
@@ -6,6 +6,8 @@
             
             <h2>Meus Contatos</h2>
 
+            <a class="btn btn-success" routerLink="/contato/save">Novo contato</a>
+
             <table class="table table-striped table-hover">
 
                 <thead>
