adicionando rota dinamica

--- a/angular/01-cadastro-contatos/app/app.component.html
+++ b/angular/01-cadastro-contatos/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-faded">
+<nav class="navbar navbar-light bg-faded mb-1">
   <a class="navbar-brand" routerLink="/">Contatos</a>
   <ul class="nav navbar-nav">
     <li class="nav-item active">
