--- a/angular/01-cadastro-contatos/app/contatos/contatos-lista.component.html
+++ b/angular/01-cadastro-contatos/app/contatos/contatos-lista.component.html
@@ -6,7 +6,7 @@
             
             <h2>Meus Contatos</h2>
 
-            <a class="btn btn-success" routerLink="/contato/save">Novo contato</a>
+            <a class="btn btn-success mb-1" routerLink="/contato/save">Novo contato</a>
 
             <table class="table table-striped table-hover">
 
@@ -20,7 +20,7 @@
                 </thead>
 
                 <tbody>
-                    <tr *ngFor="let c of contatos">
+                    <tr *ngFor="let c of contatos" [routerLink]="['/contato/save', c.id]">
                         <td>{{ c.nome }}</td>
                         <td><a href="mailto:{{ c.email }}">{{ c.email }}</a></td>
                         <td>{{ c.telefone }}</td>
