--- a/angular/01-cadastro-contatos/app/contatos/contato-detalhe.component.html
+++ b/angular/01-cadastro-contatos/app/contatos/contato-detalhe.component.html
@@ -6,22 +6,30 @@
 
         <div class="form-group">
             <label for="nome">Nome</label>
-            <input type="text" class="form-control" placeholder="Insira o nome">
+            <input type="text" class="form-control" placeholder="Insira o nome"
+                name="nome" 
+                [(ngModel)]="contato.nome">
         </div>
 
         <div class="form-group">
             <label for="nome">E-mail</label>
-            <input type="email" class="form-control" placeholder="Insira o e-mail">
+            <input type="email" class="form-control" placeholder="Insira o e-mail"
+                name="email"
+                [(ngModel)]="contato.email">
         </div>
 
         <div class="form-group">
             <label for="nome">Telefone</label>
-            <input type="text" class="form-control" placeholder="Insira o telefone">
+            <input type="text" class="form-control" placeholder="Insira o telefone"
+                name="telefone"
+                [(ngModel)]="contato.telefone">
         </div>
 
         <button type="submit" class="btn btn-success">Salvar</button>
         <a class="btn btn-secondary" routerLink="/">Voltar</a>
 
     </form>
+
+    <button (click)="teste()" class="btn btn-warning">Log</button>
 
 </div>
