--- a/angular/01-cadastro-contatos/app/contatos/contato-detalhe.component.html
+++ b/angular/01-cadastro-contatos/app/contatos/contato-detalhe.component.html
@@ -2,30 +2,42 @@
     
     <h2>Salvar Contato</h2>
 
-    <form>
+    <form #contatoForm="ngForm" novalidate>
 
-        <div class="form-group">
-            <label for="nome">Nome</label>
-            <input type="text" class="form-control" placeholder="Insira o nome"
+        <div [ngClass]="getFormGroupClass( nome.valid, nome.pristine )">
+            <label for="nome" class="form-control-label">Nome</label>
+            <input type="text" placeholder="Insira o nome"
+                [ngClass]="getFormControlClass( nome.valid, nome.pristine )"
+                required
+                #nome="ngModel"
                 name="nome" 
-                [(ngModel)]="contato.nome">
+                [(ngModel)]="contato.nome" />
+            <div class="form-control-feedback" [hidden]="nome.valid || nome.pristine">O campo nome é obrigatório</div>
         </div>
 
-        <div class="form-group">
-            <label for="nome">E-mail</label>
-            <input type="email" class="form-control" placeholder="Insira o e-mail"
+        <div [ngClass]="getFormGroupClass( email.valid, email.pristine )">
+            <label for="email" class="form-control-label">E-mail</label>
+            <input type="email" placeholder="Insira o e-mail"
+                [ngClass]="getFormControlClass( email.valid, email.pristine )"
+                required
+                #email="ngModel"
                 name="email"
-                [(ngModel)]="contato.email">
+                [(ngModel)]="contato.email" />
+            <div class="form-control-feedback" [hidden]="email.valid || email.pristine">O campo email é obrigatório</div>
         </div>
 
-        <div class="form-group">
-            <label for="nome">Telefone</label>
-            <input type="text" class="form-control" placeholder="Insira o telefone"
+        <div [ngClass]="getFormGroupClass( telefone.valid, telefone.pristine )">
+            <label for="telefone" class="form-control-label">Telefone</label>
+            <input type="text" placeholder="Insira o telefone"
+                [ngClass]="getFormControlClass( telefone.valid, telefone.pristine )"
+                required
+                #telefone="ngModel"
                 name="telefone"
-                [(ngModel)]="contato.telefone">
+                [(ngModel)]="contato.telefone" />
+            <div class="form-control-feedback" [hidden]="telefone.valid || telefone.pristine">O campo telefone é obrigatório</div>
         </div>
 
-        <button type="submit" class="btn btn-success">Salvar</button>
+        <button type="submit" class="btn btn-success" [disabled]="!contatoForm.form.valid">Salvar</button>
         <a class="btn btn-secondary" routerLink="/">Voltar</a>
 
     </form>
