--- a/angular/01-cadastro-contatos/app/contatos/contato-detalhe.component.html
+++ b/angular/01-cadastro-contatos/app/contatos/contato-detalhe.component.html
@@ -2,7 +2,7 @@
     
     <h2>Salvar Contato</h2>
 
-    <form #contatoForm="ngForm" novalidate>
+    <form (ngSubmit)="onSubmit()" #contatoForm="ngForm" novalidate>
 
         <div [ngClass]="getFormGroupClass( nome.valid, nome.pristine )">
             <label for="nome" class="form-control-label">Nome</label>
@@ -42,6 +42,6 @@
 
     </form>
 
-    <button (click)="teste()" class="btn btn-warning">Log</button>
+    <!-- <button (click)="teste()" class="btn btn-warning">Log</button> -->
 
 </div>
