--- a/angular/01-cadastro-contatos/app/contatos/contatos-lista.component.html
+++ b/angular/01-cadastro-contatos/app/contatos/contatos-lista.component.html
@@ -5,6 +5,16 @@
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
             
             <h2>Meus Contatos</h2>
+            
+            <div [ngClass]="classesCss" role="alert" *ngIf="mensagem">
+                <span [ngSwitch]="mensagem.tipo">
+                    <strong *ngSwitchCase="'danger'">Erro!</strong>
+                    <strong *ngSwitchCase="'warning'">Alerta!</strong>
+                    <strong *ngSwitchCase="'success'">Sucesso!</strong>
+                    <strong *ngSwitchDefault>Informação</strong>
+                </span>
+                {{ mensagem.texto }}
+            </div>
 
             <a class="btn btn-success mb-1" routerLink="/contato/save">Novo contato</a>
 
@@ -24,7 +34,7 @@
                         <td>{{ c.nome }}</td>
                         <td><a href="mailto:{{ c.email }}">{{ c.email }}</a></td>
                         <td>{{ c.telefone }}</td>
-                        <td><button class="btn btn-danger" (click)="onDelete(c); $event.stopPropagation()">Deletar {{ c.id }}</button></td>
+                        <td><button class="btn btn-danger" (click)="onDelete(c); $event.stopPropagation()">Deletar</button></td>
                     </tr>
                 </tbody>
 
