--- a/angular/01-cadastro-contatos/app/app.component.html
+++ b/angular/01-cadastro-contatos/app/app.component.html
@@ -9,9 +9,10 @@
     </li>
   </ul>
   <form class="form-inline float-xs-right">
-    <input class="form-control" type="text" placeholder="Search"
-      name="busca">
+    <input class="form-control" type="text" placeholder="Search" name="busca">
+    <button class="btn btn-outline-success" type="submit">Search</button>
   </form>
 </nav>
 
   <router-outlet></router-outlet>
+  <contato-busca></contato-busca>
