aplicando two way data binding nos campos

--- a/angular/01-cadastro-contatos/app/app.component.html
+++ b/angular/01-cadastro-contatos/app/app.component.html
@@ -18,4 +18,4 @@
 
 <router-outlet></router-outlet>
 
-<contato-busca [busca]="termo"></contato-busca>
+<contato-busca [busca]="termo" (buscaChange)="termo=$event"></contato-busca>
