--- a/angular/01-cadastro-contatos/app/app.component.html
+++ b/angular/01-cadastro-contatos/app/app.component.html
@@ -19,3 +19,4 @@
 <router-outlet></router-outlet>
 
 <contato-busca [busca]="termo" (buscaChange)="termo=$event"></contato-busca>
+<!-- outra implementacao: [(busca)]="termo" -->
