--- a/angular/01-cadastro-contatos/app/app.component.html
+++ b/angular/01-cadastro-contatos/app/app.component.html
@@ -19,4 +19,5 @@
 <router-outlet></router-outlet>
 
 <contato-busca [busca]="termo" (buscaChange)="termo=$event"></contato-busca>
-<!-- outra implementacao: [(busca)]="termo" -->
+
+<!-- outra implementacao twoWaydatabind (short) : [(busca)]="termo" -->
