--- a/angular/01-cadastro-contatos/app/contatos/contato-busca.component.html
+++ b/angular/01-cadastro-contatos/app/contatos/contato-busca.component.html
@@ -8,8 +8,7 @@
             <div class="form-group">
                 <label for="search"></label>
                 <input type="search" class="form-control" placeholder="Digite sua busca"
-                    [ngModel]="busca" 
-                    (ngModelChange)="search($event)"
+                    [ngModel]="busca" (ngModelChange)="search($event)"
                      />
             </div>
 
